--- a/left_tr.html
+++ b/left_tr.html
@@ -1,5 +1,4 @@
 <div class="card">
-  <b>{SITE_NAME} Hakkında</b>
   <img src="/pp.png"/>
-  <p id="about-me">I am etc etc etc</p>
+  <p class="card box" id="about-us"><b>{SITE_NAME} Sitesi Hakkında</b><br><br>{ABOUT_SITE}</p>
 </div>
