better support for home

--- a/left_tr.html
+++ b/left_tr.html
@@ -1,4 +1,4 @@
-<div class="card">
-  <img src="/pp.png"/>
+<div class="card" style="position: sticky;top:0;">
+  <img src="/pp.png" alt="{SITE_NAME}"/>
   <p class="card box" id="about-us"><b>{SITE_NAME} Sitesi Hakkında</b><br><br>{ABOUT_SITE}</p>
 </div>
